--- a/web/themes/custom/memo/css/_colors.css
+++ b/web/themes/custom/memo/css/_colors.css
@@ -25,9 +25,9 @@ body {
     background-color: #055a8e;
 }
 
-#navbar-main {
+/* #navbar-main {
     background-color: #055a8e;
-}
+} */
 
 a,
 .link {
